﻿			wxFormBuilder ChangeLog
************************************************************************
date Version 3.00.45 (Beta 3)
* Fixed FS#198 - "Wrong place of the ID in a wxHyperlinkCtrl."

06-06-2007 Version 3.00.44 (Beta 3)
* Fixed FS#193 - "Missing wxTE_PROCESS_ENTER in style of wxComboBox."
* Fixed FS#178 - "crash using toolbar"
* Fixed sizeritem properties updating in property grid when modified via toolbar.
+ Added FS#179 - "OnPaint for wxPanel."
+ Added wxStaticText::Wrap().
+ Implemented FS#192 - "Add support for dynamic event handling via Connect() methods."
  Connect() is now the default implementation of event handling.
  See the "event_generation" property of the Project object.
+ Added CustomControl - This allows the user to generate arbitrary code for a 
  control which is not yet fully supported by wxFormBuilder.
^ Updated a bunch of icons. This completes the new theme in wxFormBuilder.
+ Added wxHyperlinkCtrl.

05-29-2007 Version 3.00.43 (Beta 3)
^ Updated to wxFlatNotebook 2.2 - building with wx2.6.x is no longer supported.
  All notebooks can now be configured by right-clicking in empty area of tab bar.
* Fixed FS#190 - "annoying warning with wxTR_HIDE_ROOT in wxTreeCtrl"
+ Implemented FS#185 - "Allowing access to wxStdDialogButtonSizer buttons."
+ Added many more properties to wxGrid.
  This includes FS#191 - "Editing wxGrid column properties in the designer."
* Fixed xrc import of sizeritem, stringlist properties, and wxStdDialogButtonSizer.
  This was a regresssion in version 3.00.40.

05-21-2007 Version 3.00.42 (Beta 3)
+ Added Right-Click -> "Close Preview" to XRC Previews.
  Also much improved the effect of the ESC key in GTK.
+ Added wxRichTextCtrl

05-11-2007 Version 3.00.41 (Beta 3)
* Fixed FS#176 - "Dialog/Frame preview always displays all close/minimize/maximize buttons"
   Could probably still use some tweaking for the proper behavior in GTK.
* Fixed FS#179 - "OnPaint for wxPanel"