@@ -3,9 +3,24 @@
   <templates class="Project">
     <template name="header_preamble">
         @#include &lt;wx/wx.h&gt;  #nl
+		#ifnotequal $help_provider "none"
+		@{ @#include &lt;wx/cshelp.h&gt; #nl @}
     </template>
     <template name="header_epilogue">
-      ///////////////////////////////////////////////////////////////////////////
+		#ifnotequal $help_provider "none"
+		@{
+		// Using the construction of a static object to ensure that the help provider is set #nl
+		class wxFBContextSensitiveHelpSetter #nl
+		{ #nl
+		public: #nl
+			wxFBContextSensitiveHelpSetter() #nl
+			{ #nl
+				wxHelpProvider::Set( new $help_provider ); #nl
+			} #nl
+		}; #nl
+		#nl
+		static wxFBContextSensitiveHelpSetter s_wxFBSetTheHelpProvider; #nl
+		@}///////////////////////////////////////////////////////////////////////////
     </template>
     <template name="cpp_preamble">
 	  #ifnotnull $precompiled_header
@@ -24,7 +39,7 @@
 	  @}
 	</template>
     <template name="cpp_epilogue">
-      ///////////////////////////////////////////////////////////////////////////
+        ///////////////////////////////////////////////////////////////////////////
     </template>
   </templates>
   <templates class="wxWindow">
@@ -49,6 +64,9 @@
 
 			#ifnotnull $tooltip
 			@{ $name->SetToolTip( $tooltip ); #nl @}
+			
+			#ifnotnull $context_help
+			@{ $name->SetHelpText( $context_help ); #nl @}
 
 			#ifnotnull $minimum_size
 			@{ $name->SetMinSize( $minimum_size ); #nl @}
